<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    android:background="@drawable/background_intro3">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/fcthai"
            android:gravity="center"
            android:shadowColor="#FF8BED"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="50"
            android:text="@string/register_as_user"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_below="@+id/txtreg"
            android:layout_marginTop="20dp"
            android:src="@drawable/registeruser" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#343434"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernamereg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="@drawable/background_btn_intro2"
                android:backgroundTint="#343434"
                android:drawableRight="@drawable/ic_userlogin"
                android:fontFamily="@font/fcthai"
                android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinputlayout1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#343434"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="@drawable/background_btn_intro2"
                android:backgroundTint="#343434"
                android:drawableRight="@drawable/ic_password"
                android:fontFamily="@font/fcthai"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinputlayout2"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#343434"
            android:hint="@string/fullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullnamereg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="@drawable/background_btn_intro2"
                android:backgroundTint="#343434"
                android:drawableRight="@drawable/ic_fullname"
                android:fontFamily="@font/fcthai"
                android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputlayout4"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinputlayout3"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#343434"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="@drawable/background_btn_intro2"
                android:backgroundTint="#343434"
                android:drawableRight="@drawable/ic_email"
                android:fontFamily="@font/fcthai"
                android:inputType="textEmailAddress"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputlayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinputlayout3"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/txtinputlayout4"
            android:textColorHint="#343434"
            android:hint="@string/tel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="@drawable/background_btn_intro2"
                android:backgroundTint="#343434"
                android:drawableRight="@drawable/ic_tel"
                android:fontFamily="@font/fcthai"
                android:inputType="phone"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnconreg"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinputlayout5"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_btn_intro"
            android:backgroundTint="#323232"
            android:textColor="#FFFBFB"
            android:fontFamily="@font/fcthai"
            android:text="ยืนยัน"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btncal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinputlayout5"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/btnconreg"
            android:background="@drawable/background_btn_intro"
            android:backgroundTint="#323232"
            android:textColor="#FFFBFB"
            android:fontFamily="@font/fcthai"
            android:text="ยกเลิก"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnconreg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fcthai"
            android:text="Already have an User?"
            android:textColor="#343434"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>